tests/ui/mismatched_types/mismatch-args-crash-issue-128848.stderr
error[E0061]: this method takes 1 argument but 0 arguments were supplied
  --> $DIR/mismatch-args-crash-issue-128848.rs:6:7
   |
LL |     f.call_once()
   |       ^^^^^^^^^-- argument #1 of type `(_, _, _)` is missing
   |
note: method defined here
  --> $SRC_DIR/core/src/ops/function.rs:LL:COL
help: provide the argument
   |
LL |     f.call_once(/* args */)
   |                 ++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0061`.
